k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filemanager
  namespace: filemanager
  labels:
    app: filemanager
spec:
  selector:
    app: filemanager
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP # use LoadBalancer or NodePort if you don't have an ingress
